Pass 67 test case
